# HotspotCapture

./: .env.example  .gitignore  README.md  config.py  deepseek_thinker.py  main.py  pyproject.toml  registry.py  scheduler.py  test_ai_analysis.py
.claude/: settings.json
deploy/: DEPLOY.md  hotnews-scheduler.service
routers/: 36kr.py  51cto.py  52pojie.py  acfun.py  autohome.py  baidu.py  bilibili.py  cls.py  coolapk.py  csdn.py  dgtle.py  douban_group.py  douban_movie.py  douyin.py  earthquake.py  gameres.py  gamersky.py  geekpark.py  genshin.py  github.py  guokr.py  hackernews.py  hellogithub.py  history.py  honkai.py  hostloc.py  hupu.py  huxiu.py  ifanr.py  ithome.py  ithome_xijiayi.py  jianshu.py  juejin.py  kuaishou.py  linuxdo.py  lol.py  miyoushe.py  netease_news.py  newsmth.py  ngabbs.py  (+20 more)
test/: test_51cto.py  test_52pojie.py  test_all.py  test_baidu.py  test_bilibili.py  test_bilibili_debug.py  test_coolapk.py  test_coolapk_api.py  test_coolapk_hot.py  test_coolapk_html.py  test_coolapk_html2.py  test_coolapk_rss.py  test_csdn.py  test_dgtle.py  test_douban_group.py  test_douban_group_html.py  test_douban_group_html_desktop.py  test_douban_movie.py  test_douban_movie_html.py  test_earthquake.py  test_earthquake_html.py  test_gameres.py  test_geekpark.py  test_genshin.py  test_github.py  test_hellogithub.py  test_history.py  test_honkai.py  test_hostloc.py  test_ithome_xijiayi.py  test_juejin.py  test_juejin_error.py  test_linuxdo.py  test_lol.py  test_miyoushe.py  test_newsmth.py  test_ngabbs.py  test_nodeseek.py  test_nytimes.py  test_producthunt.py  (+22 more)
(+4 files in other folders)
