[project]
name = "pydailyhotapi"
version = "1.0.0"
description = "一个聚合热门数据的 API 接口"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "feedgen>=1.0.0",
    "python-multipart>=0.0.21",
    "python-dotenv>=1.2.1",
    "cloudscraper>=1.2.71",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "feedparser>=6.0.12",
]
